--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,20 +13,17 @@ permissions:
 jobs:
   vpc:
     runs-on: ubuntu-latest
-    # Run only if files in vpc/ changed
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'push' }}
     steps:
-      - name: Check changed files
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Detect changes
         id: changes
         uses: dorny/paths-filter@v3
         with:
           filters: |
             vpc:
               - 'vpc/**'
-
-      - name: Checkout repository
-        if: steps.changes.outputs.vpc == 'true'
-        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         if: steps.changes.outputs.vpc == 'true'
@@ -58,20 +55,17 @@ jobs:
 
   sg:
     runs-on: ubuntu-latest
-    # Run only if files in sg/ changed
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'push' }}
     steps:
-      - name: Check changed files
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Detect changes
         id: changes
         uses: dorny/paths-filter@v3
         with:
           filters: |
             sg:
               - 'sg/**'
-
-      - name: Checkout repository
-        if: steps.changes.outputs.sg == 'true'
-        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         if: steps.changes.outputs.sg == 'true'
@@ -97,6 +91,4 @@ jobs:
         run: terraform plan -input=false -var-file=terraform.tfvars
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.sg == 'true'
-        working-directory: ./sg
-        run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
+        i
