--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,30 +26,30 @@ jobs:
               - 'vpc/**'
 
       - name: Configure AWS credentials
-        if: steps.changes.outputs.vpc == 'true'
+        if: ${{ steps.changes.outputs.vpc == 'true' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
           aws-region: us-east-1
 
       - name: Setup Terraform
-        if: steps.changes.outputs.vpc == 'true'
+        if: ${{ steps.changes.outputs.vpc == 'true' }}
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.8
 
       - name: Terraform Init
-        if: steps.changes.outputs.vpc == 'true'
+        if: ${{ steps.changes.outputs.vpc == 'true' }}
         working-directory: ./vpc
         run: terraform init
 
       - name: Terraform Plan
-        if: steps.changes.outputs.vpc == 'true'
+        if: ${{ steps.changes.outputs.vpc == 'true' }}
         working-directory: ./vpc
         run: terraform plan -input=false -var-file=terraform.tfvars
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.vpc == 'true'
+        if: ${{ github.ref == 'refs/heads/main' && steps.changes.outputs.vpc == 'true' }}
         working-directory: ./vpc
         run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
 
@@ -68,27 +68,29 @@ jobs:
               - 'sg/**'
 
       - name: Configure AWS credentials
-        if: steps.changes.outputs.sg == 'true'
+        if: ${{ steps.changes.outputs.sg == 'true' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
           aws-region: us-east-1
 
       - name: Setup Terraform
-        if: steps.changes.outputs.sg == 'true'
+        if: ${{ steps.changes.outputs.sg == 'true' }}
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.8
 
       - name: Terraform Init
-        if: steps.changes.outputs.sg == 'true'
+        if: ${{ steps.changes.outputs.sg == 'true' }}
         working-directory: ./sg
         run: terraform init
 
       - name: Terraform Plan
-        if: steps.changes.outputs.sg == 'true'
+        if: ${{ steps.changes.outputs.sg == 'true' }}
         working-directory: ./sg
         run: terraform plan -input=false -var-file=terraform.tfvars
 
       - name: Terraform Apply
-        i
+        if: ${{ github.ref == 'refs/heads/main' && steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
