--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -325,4 +325,15 @@ jobs:
             terraform destroy -input=false -auto-approve -var-file=terraform.tfvars
           else
             echo "Invalid action"; exit 1
-          fi
+
+      # 🔹 Commit PEM file after apply
+      - name: Commit PEM file
+        if: ${{ steps.action.outputs.action == 'apply' }}
+        working-directory: ./ec2
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add keys/*.pem
+          git commit -m "Add generated PEM file" || echo "No changes to commit"
+          git push origin main
+
