--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,4 +51,79 @@ jobs:
         run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
 
   sg:
-    ru
+    runs-on: [self-hosted, Linux, X64]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: changes changes
+        id: changes
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            sg:
+              - 'sg/**'
+
+      - name: Terraform Init
+        if: ${{ steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform init
+
+      - name: Terraform Format
+        if: ${{ steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform fmt -recursive
+
+      - name: Terraform Validate
+        if: ${{ steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform validate
+
+      - name: Terraform Plan
+        if: ${{ steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform plan -input=false -var-file=terraform.tfvars
+
+      - name: Terraform Apply
+        if: ${{ github.ref == 'refs/heads/main' && steps.changes.outputs.sg == 'true' }}
+        working-directory: ./sg
+        run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
+
+  ec2:
+    runs-on: [self-hosted, Linux, X64]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: changes changes
+        id: changes
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            ec2:
+              - 'ec2/**'
+
+      - name: Terraform Init
+        if: ${{ steps.changes.outputs.ec2 == 'true' }}
+        working-directory: ./ec2
+        run: terraform init
+
+      - name: Terraform Format
+        if: ${{ steps.changes.outputs.ec2 == 'true' }}
+        working-directory: ./ec2
+        run: terraform fmt -recursive
+
+      - name: Terraform Validate
+        if: ${{ steps.changes.outputs.ec2 == 'true' }}
+        working-directory: ./ec2
+        run: terraform validate
+
+      - name: Terraform Plan
+        if: ${{ steps.changes.outputs.ec2 == 'true' }}
+        working-directory: ./ec2
+        run: terraform plan -input=false -var-file=terraform.tfvars
+
+      - name: Terraform Apply
+        if: ${{ github.ref == 'refs/heads/main' && steps.changes.outputs.ec2 == 'true' }}
+        working-directory: ./ec2
+        run: terraform apply -input=false -var-file=terraform.tfvars -auto-approve
