--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   vpc:
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: [terraform]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
